# GildedRose

./: .codecov.yml  .travis.yml  Readme.md
OriginalPort/: GildedRose.cpp  GildedRose.h
Solution/: CMakeLists.txt  GildedRose.cpp  GildedRose.h  GildedRoseApp.cpp  GildedRoseAppExplore.cpp  GildedRoseTestImpl.cpp  GildedRoseTests.cpp  golden.txt
